# Deep_agent_research

./: .env.example  .gitignore  demo.py  demo2.py  main.py  parallel_test.py  pyproject.toml  requirements.txt  searxng_test.py
modules/: __init__.py  custom_errors.py
modules/agents/: __init__.py  analyst.py  researcher.py  researcherv2.py  templates.py
modules/clients/: database.py  gemini_client.py  openai_client.py  para_search.py  tavily_search.py
modules/config/: settings.py
modules/core/: callbacks.py  interfaces.py  orchestrator.py  orchestrator2.py
modules/core/__pycache__/: orchestrator2.cpython-312.pyc.2544485957136
modules/models/: models.py
modules/server/: app.py  functions.py  routes.py  types.py
modules/services/: mongodb.py  redis.py
modules/tools/: search.py  search2.py  search3.py  search4.py  url_validator.py
modules/utils/: logging.py
modules/validators/: url.py
